Committed by v2rayse.com

--- a/proxy/Sing-box.yaml
+++ b/proxy/Sing-box.yaml
@@ -96,14 +96,16 @@
         "auto",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
-        "TG:@hkaa0|意大利",
-        "TG:@hkaa0|中国_1",
         "TG:@hkaa0|美国_3",
+        "TG:@hkaa0|爱尔兰",
+        "TG:@hkaa0|英国_1",
+        "TG:@hkaa0|英国_2",
+        "TG:@hkaa0|新加坡_1",
+        "TG:@hkaa0|新加坡_2",
+        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|中国_2",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|德国"
+        "TG:@hkaa0|美国_6"
       ]
     },
     {
@@ -112,14 +114,16 @@
       "outbounds": [
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
-        "TG:@hkaa0|意大利",
-        "TG:@hkaa0|中国_1",
         "TG:@hkaa0|美国_3",
+        "TG:@hkaa0|爱尔兰",
+        "TG:@hkaa0|英国_1",
+        "TG:@hkaa0|英国_2",
+        "TG:@hkaa0|新加坡_1",
+        "TG:@hkaa0|新加坡_2",
+        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|中国_2",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|德国"
+        "TG:@hkaa0|美国_6"
       ],
       "url": "https://www.gstatic.com/generate_204",
       "interval": "1m",
@@ -132,14 +136,16 @@
         "direct",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
-        "TG:@hkaa0|意大利",
-        "TG:@hkaa0|中国_1",
         "TG:@hkaa0|美国_3",
+        "TG:@hkaa0|爱尔兰",
+        "TG:@hkaa0|英国_1",
+        "TG:@hkaa0|英国_2",
+        "TG:@hkaa0|新加坡_1",
+        "TG:@hkaa0|新加坡_2",
+        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|中国_2",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|德国"
+        "TG:@hkaa0|美国_6"
       ]
     },
     {
@@ -148,14 +154,16 @@
       "outbounds": [
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
-        "TG:@hkaa0|意大利",
-        "TG:@hkaa0|中国_1",
         "TG:@hkaa0|美国_3",
+        "TG:@hkaa0|爱尔兰",
+        "TG:@hkaa0|英国_1",
+        "TG:@hkaa0|英国_2",
+        "TG:@hkaa0|新加坡_1",
+        "TG:@hkaa0|新加坡_2",
+        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|中国_2",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|德国"
+        "TG:@hkaa0|美国_6"
       ]
     },
     {
@@ -164,14 +172,16 @@
       "outbounds": [
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
-        "TG:@hkaa0|意大利",
-        "TG:@hkaa0|中国_1",
         "TG:@hkaa0|美国_3",
+        "TG:@hkaa0|爱尔兰",
+        "TG:@hkaa0|英国_1",
+        "TG:@hkaa0|英国_2",
+        "TG:@hkaa0|新加坡_1",
+        "TG:@hkaa0|新加坡_2",
+        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|中国_2",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|德国"
+        "TG:@hkaa0|美国_6"
       ]
     },
     {
@@ -180,14 +190,16 @@
       "outbounds": [
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
-        "TG:@hkaa0|意大利",
-        "TG:@hkaa0|中国_1",
         "TG:@hkaa0|美国_3",
+        "TG:@hkaa0|爱尔兰",
+        "TG:@hkaa0|英国_1",
+        "TG:@hkaa0|英国_2",
+        "TG:@hkaa0|新加坡_1",
+        "TG:@hkaa0|新加坡_2",
+        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|中国_2",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|德国"
+        "TG:@hkaa0|美国_6"
       ]
     },
     {
@@ -196,14 +208,16 @@
       "outbounds": [
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
-        "TG:@hkaa0|意大利",
-        "TG:@hkaa0|中国_1",
         "TG:@hkaa0|美国_3",
+        "TG:@hkaa0|爱尔兰",
+        "TG:@hkaa0|英国_1",
+        "TG:@hkaa0|英国_2",
+        "TG:@hkaa0|新加坡_1",
+        "TG:@hkaa0|新加坡_2",
+        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|中国_2",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|德国"
+        "TG:@hkaa0|美国_6"
       ]
     },
     {
@@ -213,14 +227,16 @@
         "direct",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
-        "TG:@hkaa0|意大利",
-        "TG:@hkaa0|中国_1",
         "TG:@hkaa0|美国_3",
+        "TG:@hkaa0|爱尔兰",
+        "TG:@hkaa0|英国_1",
+        "TG:@hkaa0|英国_2",
+        "TG:@hkaa0|新加坡_1",
+        "TG:@hkaa0|新加坡_2",
+        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|中国_2",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|德国"
+        "TG:@hkaa0|美国_6"
       ]
     },
     {
@@ -230,14 +246,16 @@
         "direct",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
-        "TG:@hkaa0|意大利",
-        "TG:@hkaa0|中国_1",
         "TG:@hkaa0|美国_3",
+        "TG:@hkaa0|爱尔兰",
+        "TG:@hkaa0|英国_1",
+        "TG:@hkaa0|英国_2",
+        "TG:@hkaa0|新加坡_1",
+        "TG:@hkaa0|新加坡_2",
+        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|中国_2",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|德国"
+        "TG:@hkaa0|美国_6"
       ]
     },
     {
@@ -247,14 +265,16 @@
         "direct",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
-        "TG:@hkaa0|意大利",
-        "TG:@hkaa0|中国_1",
         "TG:@hkaa0|美国_3",
+        "TG:@hkaa0|爱尔兰",
+        "TG:@hkaa0|英国_1",
+        "TG:@hkaa0|英国_2",
+        "TG:@hkaa0|新加坡_1",
+        "TG:@hkaa0|新加坡_2",
+        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|中国_2",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|德国"
+        "TG:@hkaa0|美国_6"
       ]
     },
     {
@@ -264,14 +284,16 @@
         "direct",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
-        "TG:@hkaa0|意大利",
-        "TG:@hkaa0|中国_1",
         "TG:@hkaa0|美国_3",
+        "TG:@hkaa0|爱尔兰",
+        "TG:@hkaa0|英国_1",
+        "TG:@hkaa0|英国_2",
+        "TG:@hkaa0|新加坡_1",
+        "TG:@hkaa0|新加坡_2",
+        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|中国_2",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|德国"
+        "TG:@hkaa0|美国_6"
       ]
     },
     {
@@ -288,14 +310,16 @@
         "direct",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
-        "TG:@hkaa0|意大利",
-        "TG:@hkaa0|中国_1",
         "TG:@hkaa0|美国_3",
+        "TG:@hkaa0|爱尔兰",
+        "TG:@hkaa0|英国_1",
+        "TG:@hkaa0|英国_2",
+        "TG:@hkaa0|新加坡_1",
+        "TG:@hkaa0|新加坡_2",
+        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|中国_2",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|德国"
+        "TG:@hkaa0|美国_6"
       ]
     },
     {
@@ -305,14 +329,16 @@
         "direct",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
-        "TG:@hkaa0|意大利",
-        "TG:@hkaa0|中国_1",
         "TG:@hkaa0|美国_3",
+        "TG:@hkaa0|爱尔兰",
+        "TG:@hkaa0|英国_1",
+        "TG:@hkaa0|英国_2",
+        "TG:@hkaa0|新加坡_1",
+        "TG:@hkaa0|新加坡_2",
+        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|中国_2",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|德国"
+        "TG:@hkaa0|美国_6"
       ]
     },
     {
@@ -344,48 +370,6 @@
       "type": "dns"
     },
     {
-      "server": "s1c.v2.v001sss.xyz",
-      "server_port": 2082,
-      "transport": {
-        "path": "",
-        "type": "ws",
-        "max_early_data": 2048,
-        "early_data_header_name": "Sec-WebSocket-Protocol"
-      },
-      "uuid": "112ac36f-3f53-4e26-8371-d25c028e1b9a",
-      "packet_encoding": "xudp",
-      "security": "auto",
-      "alter_id": 0,
-      "tag": "TG:@hkaa0|美国_1",
-      "type": "vmess"
-    },
-    {
-      "server": "205.134.180.139",
-      "server_port": 443,
-      "password": "lWaGPVFjmnag",
-      "method": "chacha20-ietf-poly1305",
-      "tag": "TG:@hkaa0|美国_2",
-      "type": "shadowsocks"
-    },
-    {
-      "server": "91.201.67.78",
-      "server_port": 50669,
-      "password": "UtwrmW77eTflZNdkOBbY7m",
-      "method": "chacha20-ietf-poly1305",
-      "tag": "TG:@hkaa0|意大利",
-      "type": "shadowsocks"
-    },
-    {
-      "server": "pro01.dns2024.org",
-      "server_port": 3223,
-      "uuid": "4ff0df2c-2092-36ab-882f-29e46fea089c",
-      "packet_encoding": "xudp",
-      "security": "auto",
-      "alter_id": 0,
-      "tag": "TG:@hkaa0|中国_1",
-      "type": "vmess"
-    },
-    {
       "server": "104.19.51.232",
       "server_port": 2086,
       "transport": {
@@ -398,75 +382,99 @@
       "packet_encoding": "xudp",
       "security": "auto",
       "alter_id": 0,
+      "tag": "TG:@hkaa0|美国_1",
+      "type": "vmess"
+    },
+    {
+      "server": "38.114.114.207",
+      "server_port": 443,
+      "password": "pKEW8JPByTVTLtM",
+      "method": "aes-256-gcm",
+      "tag": "TG:@hkaa0|美国_2",
+      "type": "shadowsocks"
+    },
+    {
+      "server": "38.114.114.207",
+      "server_port": 8009,
+      "password": "XKFKl2rULjIp74",
+      "method": "aes-256-gcm",
       "tag": "TG:@hkaa0|美国_3",
-      "type": "vmess"
+      "type": "shadowsocks"
     },
     {
-      "server": "cfcdn2.sanfencdn9.com",
-      "server_port": 2052,
-      "transport": {
-        "path": "/video/u4eCZTxW",
-        "type": "ws",
-        "max_early_data": 2048,
-        "early_data_header_name": "Sec-WebSocket-Protocol"
-      },
-      "uuid": "d9e68c12-ae26-4c90-9608-0ad10c7509c1",
-      "packet_encoding": "xudp",
-      "security": "auto",
-      "alter_id": 0,
+      "server": "13.69.184.84",
+      "server_port": 7900,
+      "password": "SyOvc5f9BBgMZHCv6H7EUe",
+      "method": "chacha20-ietf-poly1305",
+      "tag": "TG:@hkaa0|爱尔兰",
+      "type": "shadowsocks"
+    },
+    {
+      "server": "51.103.233.181",
+      "server_port": 37576,
+      "password": "GeXlCLj6oV0CDlszmbL1LK",
+      "method": "chacha20-ietf-poly1305",
+      "tag": "TG:@hkaa0|英国_1",
+      "type": "shadowsocks"
+    },
+    {
+      "server": "212.102.53.198",
+      "server_port": 443,
+      "password": "shadowsocks",
+      "method": "aes-128-gcm",
+      "tag": "TG:@hkaa0|英国_2",
+      "type": "shadowsocks"
+    },
+    {
+      "server": "68.183.176.112",
+      "server_port": 55064,
+      "password": "eHdKAXQecCPCvmXi4pU7Yj",
+      "method": "chacha20-ietf-poly1305",
+      "tag": "TG:@hkaa0|新加坡_1",
+      "type": "shadowsocks"
+    },
+    {
+      "server": "68.183.176.112",
+      "server_port": 3127,
+      "password": "GY1dECpxXiaqRD0bA7X9Wx",
+      "method": "chacha20-ietf-poly1305",
+      "tag": "TG:@hkaa0|新加坡_2",
+      "type": "shadowsocks"
+    },
+    {
+      "server": "142.4.216.225",
+      "server_port": 80,
+      "password": "JIhN6rBKkaEboLNXVSv5rq",
+      "method": "chacha20-ietf-poly1305",
+      "tag": "TG:@hkaa0|加拿大",
+      "type": "shadowsocks"
+    },
+    {
+      "server": "38.110.1.3",
+      "server_port": 7002,
+      "password": "RexnBgU7EV5ADxG",
+      "method": "aes-256-gcm",
       "tag": "TG:@hkaa0|美国_4",
-      "type": "vmess"
+      "type": "shadowsocks"
     },
     {
-      "server": "104.26.0.56",
-      "server_port": 2086,
-      "transport": {
-        "path": "github.com/Alvin9999",
-        "type": "ws",
-        "max_early_data": 2048,
-        "early_data_header_name": "Sec-WebSocket-Protocol"
-      },
-      "uuid": "e9e3cc13-db48-4cc1-8c24-7626439a5339",
-      "packet_encoding": "xudp",
-      "security": "auto",
-      "alter_id": 0,
-      "tag": "TG:@hkaa0|美国_5",
-      "type": "vmess"
-    },
-    {
-      "server": "36.141.40.27",
-      "server_port": 13002,
+      "server": "131.186.21.135",
+      "server_port": 60954,
       "tls": {
         "enabled": true,
-        "server_name": "ip2648428075.mobgslb.tbcache.com",
+        "server_name": "h.iveze.com",
         "insecure": true
       },
-      "password": "15bc9e79-5ba0-388a-8804-67f203ee4487",
-      "tag": "TG:@hkaa0|中国_2",
+      "password": "huge123456",
+      "tag": "TG:@hkaa0|美国_5",
       "type": "trojan"
     },
     {
-      "server": "104.21.8.157",
-      "server_port": 2082,
-      "transport": {
-        "path": "/",
-        "type": "ws",
-        "max_early_data": 2048,
-        "early_data_header_name": "Sec-WebSocket-Protocol"
-      },
-      "uuid": "112ac36f-3f53-4e26-8371-d25c028e1b9a",
-      "packet_encoding": "xudp",
-      "security": "auto",
-      "alter_id": 0,
+      "server": "38.114.114.207",
+      "server_port": 8080,
+      "password": "KixLvKzwjekG00rm",
+      "method": "aes-256-gcm",
       "tag": "TG:@hkaa0|美国_6",
-      "type": "vmess"
-    },
-    {
-      "server": "37.1.192.68",
-      "server_port": 23166,
-      "password": "1n89nFNTdzc3mEOtkNWA9B",
-      "method": "chacha20-ietf-poly1305",
-      "tag": "TG:@hkaa0|德国",
       "type": "shadowsocks"
     }
   ],
