--- a/proxy/clash.yaml
+++ b/proxy/clash.yaml
@@ -1,9 +1,9 @@
 ####################################
 # 创建者：五叶小铺 https://hkaa0.shop/
 # 客户端：Clash
-# 创建时间：2024-07-17 21:21:39
+# 创建时间：2024-07-29 02:28:14
 # 使用模版：V2RaySE 默认模版
-# 节点数量：10
+# 节点数量：12
 ####################################
 mixed-port: 7890
 allow-lan: true
@@ -85,16 +85,18 @@ dns:
       - 0.0.0.0/32
 
 proxies:
-  - {"name":"TG:@hkaa0|美国_1","type":"vmess","server":"s1c.v2.v001sss.xyz","port":2082,"cipher":"auto","uuid":"112ac36f-3f53-4e26-8371-d25c028e1b9a","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":""}}
-  - {"name":"TG:@hkaa0|美国_2","type":"ss","server":"205.134.180.139","port":443,"password":"lWaGPVFjmnag","cipher":"chacha20-ietf-poly1305"}
-  - {"name":"TG:@hkaa0|意大利","type":"ss","server":"91.201.67.78","port":50669,"password":"UtwrmW77eTflZNdkOBbY7m","cipher":"chacha20-ietf-poly1305"}
-  - {"name":"TG:@hkaa0|中国_1","type":"vmess","server":"pro01.dns2024.org","port":3223,"cipher":"auto","uuid":"4ff0df2c-2092-36ab-882f-29e46fea089c","alterId":0,"tls":true,"skip-cert-verify":true,"network":"tcp"}
-  - {"name":"TG:@hkaa0|美国_3","type":"vmess","server":"104.19.51.232","port":2086,"cipher":"auto","uuid":"29eebb60-b27b-4a9d-bba5-947763d9205e","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"github.com/Alvin9999","headers":{"host":"ip005.dtku47.xyz"}}}
-  - {"name":"TG:@hkaa0|美国_4","type":"vmess","server":"cfcdn2.sanfencdn9.com","port":2052,"cipher":"auto","uuid":"d9e68c12-ae26-4c90-9608-0ad10c7509c1","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/video/u4eCZTxW","headers":{"host":"jpafzyhfsg3.yofnhkfc.xyz"}}}
-  - {"name":"TG:@hkaa0|美国_5","type":"vmess","server":"104.26.0.56","port":2086,"cipher":"auto","uuid":"e9e3cc13-db48-4cc1-8c24-7626439a5339","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"github.com/Alvin9999","headers":{"host":"ip14.freegradely.xyz"}}}
-  - {"name":"TG:@hkaa0|中国_2","type":"trojan","server":"36.141.40.27","port":13002,"udp":true,"password":"15bc9e79-5ba0-388a-8804-67f203ee4487","sni":"ip2648428075.mobgslb.tbcache.com","skip-cert-verify":true,"network":"tcp"}
-  - {"name":"TG:@hkaa0|美国_6","type":"vmess","server":"104.21.8.157","port":2082,"cipher":"auto","uuid":"112ac36f-3f53-4e26-8371-d25c028e1b9a","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"/","headers":{"host":"s1c.v2.v001sss.xyz"}}}
-  - {"name":"TG:@hkaa0|德国","type":"ss","server":"37.1.192.68","port":23166,"password":"1n89nFNTdzc3mEOtkNWA9B","cipher":"chacha20-ietf-poly1305"}
+  - {"name":"TG:@hkaa0|美国_1","type":"vmess","server":"104.19.51.232","port":2086,"cipher":"auto","uuid":"29eebb60-b27b-4a9d-bba5-947763d9205e","alterId":0,"tls":false,"skip-cert-verify":true,"network":"ws","ws-opts":{"path":"github.com/Alvin9999","headers":{"host":"ip005.dtku47.xyz"}}}
+  - {"name":"TG:@hkaa0|美国_2","type":"ss","server":"38.114.114.207","port":443,"password":"pKEW8JPByTVTLtM","cipher":"aes-256-gcm"}
+  - {"name":"TG:@hkaa0|美国_3","type":"ss","server":"38.114.114.207","port":8009,"password":"XKFKl2rULjIp74","cipher":"aes-256-gcm"}
+  - {"name":"TG:@hkaa0|爱尔兰","type":"ss","server":"13.69.184.84","port":7900,"password":"SyOvc5f9BBgMZHCv6H7EUe","cipher":"chacha20-ietf-poly1305"}
+  - {"name":"TG:@hkaa0|英国_1","type":"ss","server":"51.103.233.181","port":37576,"password":"GeXlCLj6oV0CDlszmbL1LK","cipher":"chacha20-ietf-poly1305"}
+  - {"name":"TG:@hkaa0|英国_2","type":"ss","server":"212.102.53.198","port":443,"password":"shadowsocks","cipher":"aes-128-gcm"}
+  - {"name":"TG:@hkaa0|新加坡_1","type":"ss","server":"68.183.176.112","port":55064,"password":"eHdKAXQecCPCvmXi4pU7Yj","cipher":"chacha20-ietf-poly1305"}
+  - {"name":"TG:@hkaa0|新加坡_2","type":"ss","server":"68.183.176.112","port":3127,"password":"GY1dECpxXiaqRD0bA7X9Wx","cipher":"chacha20-ietf-poly1305"}
+  - {"name":"TG:@hkaa0|加拿大","type":"ss","server":"142.4.216.225","port":80,"password":"JIhN6rBKkaEboLNXVSv5rq","cipher":"chacha20-ietf-poly1305"}
+  - {"name":"TG:@hkaa0|美国_4","type":"ss","server":"38.110.1.3","port":7002,"password":"RexnBgU7EV5ADxG","cipher":"aes-256-gcm"}
+  - {"name":"TG:@hkaa0|美国_5","type":"trojan","server":"131.186.21.135","port":60954,"udp":true,"password":"huge123456","sni":"h.iveze.com","skip-cert-verify":true,"network":"tcp"}
+  - {"name":"TG:@hkaa0|美国_6","type":"ss","server":"38.114.114.207","port":8080,"password":"KixLvKzwjekG00rm","cipher":"aes-256-gcm"}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
@@ -103,14 +105,16 @@ proxy-groups:
       - DIRECT
       - TG:@hkaa0|美国_1
       - TG:@hkaa0|美国_2
-      - TG:@hkaa0|意大利
-      - TG:@hkaa0|中国_1
       - TG:@hkaa0|美国_3
+      - TG:@hkaa0|爱尔兰
+      - TG:@hkaa0|英国_1
+      - TG:@hkaa0|英国_2
+      - TG:@hkaa0|新加坡_1
+      - TG:@hkaa0|新加坡_2
+      - TG:@hkaa0|加拿大
       - TG:@hkaa0|美国_4
       - TG:@hkaa0|美国_5
-      - TG:@hkaa0|中国_2
       - TG:@hkaa0|美国_6
-      - TG:@hkaa0|德国
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -119,14 +123,16 @@ proxy-groups:
     proxies:
       - TG:@hkaa0|美国_1
       - TG:@hkaa0|美国_2
-      - TG:@hkaa0|意大利
-      - TG:@hkaa0|中国_1
       - TG:@hkaa0|美国_3
+      - TG:@hkaa0|爱尔兰
+      - TG:@hkaa0|英国_1
+      - TG:@hkaa0|英国_2
+      - TG:@hkaa0|新加坡_1
+      - TG:@hkaa0|新加坡_2
+      - TG:@hkaa0|加拿大
       - TG:@hkaa0|美国_4
       - TG:@hkaa0|美国_5
-      - TG:@hkaa0|中国_2
       - TG:@hkaa0|美国_6
-      - TG:@hkaa0|德国
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -135,14 +141,16 @@ proxy-groups:
       - 🎯 全球直连
       - TG:@hkaa0|美国_1
       - TG:@hkaa0|美国_2
-      - TG:@hkaa0|意大利
-      - TG:@hkaa0|中国_1
       - TG:@hkaa0|美国_3
+      - TG:@hkaa0|爱尔兰
+      - TG:@hkaa0|英国_1
+      - TG:@hkaa0|英国_2
+      - TG:@hkaa0|新加坡_1
+      - TG:@hkaa0|新加坡_2
+      - TG:@hkaa0|加拿大
       - TG:@hkaa0|美国_4
       - TG:@hkaa0|美国_5
-      - TG:@hkaa0|中国_2
       - TG:@hkaa0|美国_6
-      - TG:@hkaa0|德国
   - name: 📲 电报信息
     type: select
     proxies:
@@ -150,14 +158,16 @@ proxy-groups:
       - 🎯 全球直连
       - TG:@hkaa0|美国_1
       - TG:@hkaa0|美国_2
-      - TG:@hkaa0|意大利
-      - TG:@hkaa0|中国_1
       - TG:@hkaa0|美国_3
+      - TG:@hkaa0|爱尔兰
+      - TG:@hkaa0|英国_1
+      - TG:@hkaa0|英国_2
+      - TG:@hkaa0|新加坡_1
+      - TG:@hkaa0|新加坡_2
+      - TG:@hkaa0|加拿大
       - TG:@hkaa0|美国_4
       - TG:@hkaa0|美国_5
-      - TG:@hkaa0|中国_2
       - TG:@hkaa0|美国_6
-      - TG:@hkaa0|德国
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
@@ -165,14 +175,16 @@ proxy-groups:
       - 🚀 节点选择
       - TG:@hkaa0|美国_1
       - TG:@hkaa0|美国_2
-      - TG:@hkaa0|意大利
-      - TG:@hkaa0|中国_1
       - TG:@hkaa0|美国_3
+      - TG:@hkaa0|爱尔兰
+      - TG:@hkaa0|英国_1
+      - TG:@hkaa0|英国_2
+      - TG:@hkaa0|新加坡_1
+      - TG:@hkaa0|新加坡_2
+      - TG:@hkaa0|加拿大
       - TG:@hkaa0|美国_4
       - TG:@hkaa0|美国_5
-      - TG:@hkaa0|中国_2
       - TG:@hkaa0|美国_6
-      - TG:@hkaa0|德国
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -180,14 +192,16 @@ proxy-groups:
       - 🎯 全球直连
       - TG:@hkaa0|美国_1
       - TG:@hkaa0|美国_2
-      - TG:@hkaa0|意大利
-      - TG:@hkaa0|中国_1
       - TG:@hkaa0|美国_3
+      - TG:@hkaa0|爱尔兰
+      - TG:@hkaa0|英国_1
+      - TG:@hkaa0|英国_2
+      - TG:@hkaa0|新加坡_1
+      - TG:@hkaa0|新加坡_2
+      - TG:@hkaa0|加拿大
       - TG:@hkaa0|美国_4
       - TG:@hkaa0|美国_5
-      - TG:@hkaa0|中国_2
       - TG:@hkaa0|美国_6
-      - TG:@hkaa0|德国
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -212,14 +226,16 @@ proxy-groups:
       - ♻️ 自动选择
       - TG:@hkaa0|美国_1
       - TG:@hkaa0|美国_2
-      - TG:@hkaa0|意大利
-      - TG:@hkaa0|中国_1
       - TG:@hkaa0|美国_3
+      - TG:@hkaa0|爱尔兰
+      - TG:@hkaa0|英国_1
+      - TG:@hkaa0|英国_2
+      - TG:@hkaa0|新加坡_1
+      - TG:@hkaa0|新加坡_2
+      - TG:@hkaa0|加拿大
       - TG:@hkaa0|美国_4
       - TG:@hkaa0|美国_5
-      - TG:@hkaa0|中国_2
       - TG:@hkaa0|美国_6
-      - TG:@hkaa0|德国
 
 rules:
 # 本地/局域网地址
