--- a/proxy/Sing-box.yaml
+++ b/proxy/Sing-box.yaml
@@ -94,32 +94,32 @@
       "type": "selector",
       "outbounds": [
         "auto",
-        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|乌克兰",
         "TG:@hkaa0|美国_6",
         "TG:@hkaa0|美国_7",
-        "TG:@hkaa0|英国"
+        "TG:@hkaa0|瑞士_1",
+        "TG:@hkaa0|美国_8",
+        "TG:@hkaa0|瑞士_2"
       ]
     },
     {
       "tag": "auto",
       "type": "urltest",
       "outbounds": [
-        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|乌克兰",
         "TG:@hkaa0|美国_6",
         "TG:@hkaa0|美国_7",
-        "TG:@hkaa0|英国"
+        "TG:@hkaa0|瑞士_1",
+        "TG:@hkaa0|美国_8",
+        "TG:@hkaa0|瑞士_2"
       ],
       "url": "https://www.gstatic.com/generate_204",
       "interval": "1m",
@@ -130,80 +130,80 @@
       "type": "selector",
       "outbounds": [
         "direct",
-        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|乌克兰",
         "TG:@hkaa0|美国_6",
         "TG:@hkaa0|美国_7",
-        "TG:@hkaa0|英国"
+        "TG:@hkaa0|瑞士_1",
+        "TG:@hkaa0|美国_8",
+        "TG:@hkaa0|瑞士_2"
       ]
     },
     {
       "tag": "🌌 Google",
       "type": "selector",
       "outbounds": [
-        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|乌克兰",
         "TG:@hkaa0|美国_6",
         "TG:@hkaa0|美国_7",
-        "TG:@hkaa0|英国"
+        "TG:@hkaa0|瑞士_1",
+        "TG:@hkaa0|美国_8",
+        "TG:@hkaa0|瑞士_2"
       ]
     },
     {
       "tag": "📟 Telegram",
       "type": "selector",
       "outbounds": [
-        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|乌克兰",
         "TG:@hkaa0|美国_6",
         "TG:@hkaa0|美国_7",
-        "TG:@hkaa0|英国"
+        "TG:@hkaa0|瑞士_1",
+        "TG:@hkaa0|美国_8",
+        "TG:@hkaa0|瑞士_2"
       ]
     },
     {
       "tag": "🐦 Twitter",
       "type": "selector",
       "outbounds": [
-        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|乌克兰",
         "TG:@hkaa0|美国_6",
         "TG:@hkaa0|美国_7",
-        "TG:@hkaa0|英国"
+        "TG:@hkaa0|瑞士_1",
+        "TG:@hkaa0|美国_8",
+        "TG:@hkaa0|瑞士_2"
       ]
     },
     {
       "tag": "👤 Facebook",
       "type": "selector",
       "outbounds": [
-        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|乌克兰",
         "TG:@hkaa0|美国_6",
         "TG:@hkaa0|美国_7",
-        "TG:@hkaa0|英国"
+        "TG:@hkaa0|瑞士_1",
+        "TG:@hkaa0|美国_8",
+        "TG:@hkaa0|瑞士_2"
       ]
     },
     {
@@ -211,16 +211,16 @@
       "type": "selector",
       "outbounds": [
         "direct",
-        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|乌克兰",
         "TG:@hkaa0|美国_6",
         "TG:@hkaa0|美国_7",
-        "TG:@hkaa0|英国"
+        "TG:@hkaa0|瑞士_1",
+        "TG:@hkaa0|美国_8",
+        "TG:@hkaa0|瑞士_2"
       ]
     },
     {
@@ -228,16 +228,16 @@
       "type": "selector",
       "outbounds": [
         "direct",
-        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|乌克兰",
         "TG:@hkaa0|美国_6",
         "TG:@hkaa0|美国_7",
-        "TG:@hkaa0|英国"
+        "TG:@hkaa0|瑞士_1",
+        "TG:@hkaa0|美国_8",
+        "TG:@hkaa0|瑞士_2"
       ]
     },
     {
@@ -245,16 +245,16 @@
       "type": "selector",
       "outbounds": [
         "direct",
-        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|乌克兰",
         "TG:@hkaa0|美国_6",
         "TG:@hkaa0|美国_7",
-        "TG:@hkaa0|英国"
+        "TG:@hkaa0|瑞士_1",
+        "TG:@hkaa0|美国_8",
+        "TG:@hkaa0|瑞士_2"
       ]
     },
     {
@@ -262,16 +262,16 @@
       "type": "selector",
       "outbounds": [
         "direct",
-        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|乌克兰",
         "TG:@hkaa0|美国_6",
         "TG:@hkaa0|美国_7",
-        "TG:@hkaa0|英国"
+        "TG:@hkaa0|瑞士_1",
+        "TG:@hkaa0|美国_8",
+        "TG:@hkaa0|瑞士_2"
       ]
     },
     {
@@ -286,16 +286,16 @@
       "type": "selector",
       "outbounds": [
         "direct",
-        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|乌克兰",
         "TG:@hkaa0|美国_6",
         "TG:@hkaa0|美国_7",
-        "TG:@hkaa0|英国"
+        "TG:@hkaa0|瑞士_1",
+        "TG:@hkaa0|美国_8",
+        "TG:@hkaa0|瑞士_2"
       ]
     },
     {
@@ -303,16 +303,16 @@
       "type": "selector",
       "outbounds": [
         "direct",
-        "TG:@hkaa0|加拿大",
         "TG:@hkaa0|美国_1",
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
         "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|乌克兰",
         "TG:@hkaa0|美国_6",
         "TG:@hkaa0|美国_7",
-        "TG:@hkaa0|英国"
+        "TG:@hkaa0|瑞士_1",
+        "TG:@hkaa0|美国_8",
+        "TG:@hkaa0|瑞士_2"
       ]
     },
     {
@@ -342,14 +342,6 @@
     {
       "tag": "dns-out",
       "type": "dns"
-    },
-    {
-      "server": "142.4.216.225",
-      "server_port": 80,
-      "password": "JIhN6rBKkaEboLNXVSv5rq",
-      "method": "chacha20-ietf-poly1305",
-      "tag": "TG:@hkaa0|加拿大",
-      "type": "shadowsocks"
     },
     {
       "server": "104.19.51.232",
@@ -400,16 +392,6 @@
       "type": "vmess"
     },
     {
-      "server": "45.86.73.194",
-      "server_port": 17327,
-      "uuid": "8904baaf-c5cb-486c-ffab-caa7463467d8",
-      "packet_encoding": "xudp",
-      "security": "auto",
-      "alter_id": 0,
-      "tag": "TG:@hkaa0|美国_4",
-      "type": "vmess"
-    },
-    {
       "server": "23.162.200.227",
       "server_port": 443,
       "tls": {
@@ -425,46 +407,51 @@
       "packet_encoding": "xudp",
       "security": "auto",
       "alter_id": 0,
-      "tag": "TG:@hkaa0|美国_5",
+      "tag": "TG:@hkaa0|美国_4",
       "type": "vmess"
     },
     {
-      "server": "cn1.cdn.xfltd-cdn.top",
-      "server_port": 12012,
-      "tls": {
-        "enabled": true,
-        "server_name": "cn1.cdn.xfltd-cdn.top",
-        "insecure": true
-      },
-      "password": "3698a3e7-2877-4ded-a665-d81ee3cfd449",
-      "tag": "TG:@hkaa0|乌克兰",
-      "type": "trojan"
-    },
-    {
-      "server": "jp.mjt000.com",
-      "server_port": 443,
-      "tls": {
-        "enabled": true,
-        "insecure": true
-      },
-      "password": "6ffa0d17-129b-44fd-9271-804c4b4a0cac",
-      "tag": "TG:@hkaa0|美国_6",
-      "type": "trojan"
-    },
-    {
-      "server": "sg1.1vpn.sbs",
-      "server_port": 443,
-      "tls": {
-        "enabled": true,
-        "server_name": "sg1.1vpn.sbs"
-      },
+      "server": "172.64.229.209",
+      "server_port": 80,
       "transport": {
-        "path": "/oihuih6788",
+        "path": "/",
         "type": "ws",
         "max_early_data": 2048,
         "early_data_header_name": "Sec-WebSocket-Protocol"
       },
-      "uuid": "1335b461-4941-4d13-936b-76a16eec9ad6",
+      "uuid": "5820093a-bb7d-4e15-8575-1a529f2d8282",
+      "packet_encoding": "xudp",
+      "security": "auto",
+      "alter_id": 0,
+      "tag": "TG:@hkaa0|美国_5",
+      "type": "vmess"
+    },
+    {
+      "server": "162.159.129.138",
+      "server_port": 80,
+      "transport": {
+        "path": "/",
+        "type": "ws",
+        "max_early_data": 2048,
+        "early_data_header_name": "Sec-WebSocket-Protocol"
+      },
+      "uuid": "5820093a-bb7d-4e15-8575-1a529f2d8282",
+      "packet_encoding": "xudp",
+      "security": "auto",
+      "alter_id": 0,
+      "tag": "TG:@hkaa0|美国_6",
+      "type": "vmess"
+    },
+    {
+      "server": "162.159.136.106",
+      "server_port": 80,
+      "transport": {
+        "path": "/",
+        "type": "ws",
+        "max_early_data": 2048,
+        "early_data_header_name": "Sec-WebSocket-Protocol"
+      },
+      "uuid": "5820093a-bb7d-4e15-8575-1a529f2d8282",
       "packet_encoding": "xudp",
       "security": "auto",
       "alter_id": 0,
@@ -472,11 +459,27 @@
       "type": "vmess"
     },
     {
-      "server": "212.102.53.79",
+      "server": "156.146.62.162",
       "server_port": 443,
       "password": "shadowsocks",
       "method": "aes-128-gcm",
-      "tag": "TG:@hkaa0|英国",
+      "tag": "TG:@hkaa0|瑞士_1",
+      "type": "shadowsocks"
+    },
+    {
+      "server": "156.146.38.170",
+      "server_port": 443,
+      "password": "shadowsocks",
+      "method": "aes-128-gcm",
+      "tag": "TG:@hkaa0|美国_8",
+      "type": "shadowsocks"
+    },
+    {
+      "server": "156.146.62.164",
+      "server_port": 443,
+      "password": "shadowsocks",
+      "method": "aes-128-gcm",
+      "tag": "TG:@hkaa0|瑞士_2",
       "type": "shadowsocks"
     }
   ],
