Committed by v2rayse.com

--- a/proxy/Sing-box.yaml
+++ b/proxy/Sing-box.yaml
@@ -98,12 +98,12 @@
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
-        "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|美国_7",
         "TG:@hkaa0|瑞士_1",
-        "TG:@hkaa0|美国_8",
-        "TG:@hkaa0|瑞士_2"
+        "TG:@hkaa0|美国_5",
+        "TG:@hkaa0|瑞士_2",
+        "TG:@hkaa0|美国_6",
+        "TG:@hkaa0|中国",
+        "TG:@hkaa0|美国_7"
       ]
     },
     {
@@ -114,12 +114,12 @@
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
-        "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|美国_7",
         "TG:@hkaa0|瑞士_1",
-        "TG:@hkaa0|美国_8",
-        "TG:@hkaa0|瑞士_2"
+        "TG:@hkaa0|美国_5",
+        "TG:@hkaa0|瑞士_2",
+        "TG:@hkaa0|美国_6",
+        "TG:@hkaa0|中国",
+        "TG:@hkaa0|美国_7"
       ],
       "url": "https://www.gstatic.com/generate_204",
       "interval": "1m",
@@ -134,12 +134,12 @@
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
-        "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|美国_7",
         "TG:@hkaa0|瑞士_1",
-        "TG:@hkaa0|美国_8",
-        "TG:@hkaa0|瑞士_2"
+        "TG:@hkaa0|美国_5",
+        "TG:@hkaa0|瑞士_2",
+        "TG:@hkaa0|美国_6",
+        "TG:@hkaa0|中国",
+        "TG:@hkaa0|美国_7"
       ]
     },
     {
@@ -150,12 +150,12 @@
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
-        "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|美国_7",
         "TG:@hkaa0|瑞士_1",
-        "TG:@hkaa0|美国_8",
-        "TG:@hkaa0|瑞士_2"
+        "TG:@hkaa0|美国_5",
+        "TG:@hkaa0|瑞士_2",
+        "TG:@hkaa0|美国_6",
+        "TG:@hkaa0|中国",
+        "TG:@hkaa0|美国_7"
       ]
     },
     {
@@ -166,12 +166,12 @@
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
-        "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|美国_7",
         "TG:@hkaa0|瑞士_1",
-        "TG:@hkaa0|美国_8",
-        "TG:@hkaa0|瑞士_2"
+        "TG:@hkaa0|美国_5",
+        "TG:@hkaa0|瑞士_2",
+        "TG:@hkaa0|美国_6",
+        "TG:@hkaa0|中国",
+        "TG:@hkaa0|美国_7"
       ]
     },
     {
@@ -182,12 +182,12 @@
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
-        "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|美国_7",
         "TG:@hkaa0|瑞士_1",
-        "TG:@hkaa0|美国_8",
-        "TG:@hkaa0|瑞士_2"
+        "TG:@hkaa0|美国_5",
+        "TG:@hkaa0|瑞士_2",
+        "TG:@hkaa0|美国_6",
+        "TG:@hkaa0|中国",
+        "TG:@hkaa0|美国_7"
       ]
     },
     {
@@ -198,12 +198,12 @@
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
-        "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|美国_7",
         "TG:@hkaa0|瑞士_1",
-        "TG:@hkaa0|美国_8",
-        "TG:@hkaa0|瑞士_2"
+        "TG:@hkaa0|美国_5",
+        "TG:@hkaa0|瑞士_2",
+        "TG:@hkaa0|美国_6",
+        "TG:@hkaa0|中国",
+        "TG:@hkaa0|美国_7"
       ]
     },
     {
@@ -215,12 +215,12 @@
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
-        "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|美国_7",
         "TG:@hkaa0|瑞士_1",
-        "TG:@hkaa0|美国_8",
-        "TG:@hkaa0|瑞士_2"
+        "TG:@hkaa0|美国_5",
+        "TG:@hkaa0|瑞士_2",
+        "TG:@hkaa0|美国_6",
+        "TG:@hkaa0|中国",
+        "TG:@hkaa0|美国_7"
       ]
     },
     {
@@ -232,12 +232,12 @@
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
-        "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|美国_7",
         "TG:@hkaa0|瑞士_1",
-        "TG:@hkaa0|美国_8",
-        "TG:@hkaa0|瑞士_2"
+        "TG:@hkaa0|美国_5",
+        "TG:@hkaa0|瑞士_2",
+        "TG:@hkaa0|美国_6",
+        "TG:@hkaa0|中国",
+        "TG:@hkaa0|美国_7"
       ]
     },
     {
@@ -249,12 +249,12 @@
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
-        "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|美国_7",
         "TG:@hkaa0|瑞士_1",
-        "TG:@hkaa0|美国_8",
-        "TG:@hkaa0|瑞士_2"
+        "TG:@hkaa0|美国_5",
+        "TG:@hkaa0|瑞士_2",
+        "TG:@hkaa0|美国_6",
+        "TG:@hkaa0|中国",
+        "TG:@hkaa0|美国_7"
       ]
     },
     {
@@ -266,12 +266,12 @@
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
-        "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|美国_7",
         "TG:@hkaa0|瑞士_1",
-        "TG:@hkaa0|美国_8",
-        "TG:@hkaa0|瑞士_2"
+        "TG:@hkaa0|美国_5",
+        "TG:@hkaa0|瑞士_2",
+        "TG:@hkaa0|美国_6",
+        "TG:@hkaa0|中国",
+        "TG:@hkaa0|美国_7"
       ]
     },
     {
@@ -290,12 +290,12 @@
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
-        "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|美国_7",
         "TG:@hkaa0|瑞士_1",
-        "TG:@hkaa0|美国_8",
-        "TG:@hkaa0|瑞士_2"
+        "TG:@hkaa0|美国_5",
+        "TG:@hkaa0|瑞士_2",
+        "TG:@hkaa0|美国_6",
+        "TG:@hkaa0|中国",
+        "TG:@hkaa0|美国_7"
       ]
     },
     {
@@ -307,12 +307,12 @@
         "TG:@hkaa0|美国_2",
         "TG:@hkaa0|美国_3",
         "TG:@hkaa0|美国_4",
-        "TG:@hkaa0|美国_5",
-        "TG:@hkaa0|美国_6",
-        "TG:@hkaa0|美国_7",
         "TG:@hkaa0|瑞士_1",
-        "TG:@hkaa0|美国_8",
-        "TG:@hkaa0|瑞士_2"
+        "TG:@hkaa0|美国_5",
+        "TG:@hkaa0|瑞士_2",
+        "TG:@hkaa0|美国_6",
+        "TG:@hkaa0|中国",
+        "TG:@hkaa0|美国_7"
       ]
     },
     {
@@ -411,54 +411,6 @@
       "type": "vmess"
     },
     {
-      "server": "172.64.229.209",
-      "server_port": 80,
-      "transport": {
-        "path": "/",
-        "type": "ws",
-        "max_early_data": 2048,
-        "early_data_header_name": "Sec-WebSocket-Protocol"
-      },
-      "uuid": "5820093a-bb7d-4e15-8575-1a529f2d8282",
-      "packet_encoding": "xudp",
-      "security": "auto",
-      "alter_id": 0,
-      "tag": "TG:@hkaa0|美国_5",
-      "type": "vmess"
-    },
-    {
-      "server": "162.159.129.138",
-      "server_port": 80,
-      "transport": {
-        "path": "/",
-        "type": "ws",
-        "max_early_data": 2048,
-        "early_data_header_name": "Sec-WebSocket-Protocol"
-      },
-      "uuid": "5820093a-bb7d-4e15-8575-1a529f2d8282",
-      "packet_encoding": "xudp",
-      "security": "auto",
-      "alter_id": 0,
-      "tag": "TG:@hkaa0|美国_6",
-      "type": "vmess"
-    },
-    {
-      "server": "162.159.136.106",
-      "server_port": 80,
-      "transport": {
-        "path": "/",
-        "type": "ws",
-        "max_early_data": 2048,
-        "early_data_header_name": "Sec-WebSocket-Protocol"
-      },
-      "uuid": "5820093a-bb7d-4e15-8575-1a529f2d8282",
-      "packet_encoding": "xudp",
-      "security": "auto",
-      "alter_id": 0,
-      "tag": "TG:@hkaa0|美国_7",
-      "type": "vmess"
-    },
-    {
       "server": "156.146.62.162",
       "server_port": 443,
       "password": "shadowsocks",
@@ -471,7 +423,7 @@
       "server_port": 443,
       "password": "shadowsocks",
       "method": "aes-128-gcm",
-      "tag": "TG:@hkaa0|美国_8",
+      "tag": "TG:@hkaa0|美国_5",
       "type": "shadowsocks"
     },
     {
@@ -481,6 +433,46 @@
       "method": "aes-128-gcm",
       "tag": "TG:@hkaa0|瑞士_2",
       "type": "shadowsocks"
+    },
+    {
+      "server": "cfcdn3.sanfencdn9.com",
+      "server_port": 80,
+      "transport": {
+        "path": "/video/VDXcaM7r",
+        "type": "ws",
+        "max_early_data": 2048,
+        "early_data_header_name": "Sec-WebSocket-Protocol"
+      },
+      "uuid": "dd6973d6-9af9-4edd-9140-c57eab178a0d",
+      "packet_encoding": "xudp",
+      "security": "auto",
+      "alter_id": 0,
+      "tag": "TG:@hkaa0|美国_6",
+      "type": "vmess"
+    },
+    {
+      "server": "hk1.mhw7e2.online",
+      "server_port": 20001,
+      "password": "70747514-fb14-4f31-8390-e1f0453eff6d",
+      "method": "chacha20-ietf-poly1305",
+      "tag": "TG:@hkaa0|中国",
+      "type": "shadowsocks"
+    },
+    {
+      "server": "cfcdn1.sanfencdn9.com",
+      "server_port": 2052,
+      "transport": {
+        "path": "/video/QXjZG5u4F2",
+        "type": "ws",
+        "max_early_data": 2048,
+        "early_data_header_name": "Sec-WebSocket-Protocol"
+      },
+      "uuid": "7786bd51-a965-4ae9-aac4-a224f9457243",
+      "packet_encoding": "xudp",
+      "security": "auto",
+      "alter_id": 0,
+      "tag": "TG:@hkaa0|美国_7",
+      "type": "vmess"
     }
   ],
   "route": {
